# perf-oriented-dev

./: README.md
exercises/: sheet_04.md
exercises/sheet_01/: bench_overengineered.sh  bench_small_samples.sh  benchmark.sh  package-lock.json  sheet01.md  sheet_01_sol.md
exercises/sheet_01/jobs/: job01_bench_delannoy.sh  job01_bench_filegen.sh  job01_bench_filesearch.sh  job01_bench_mmul.sh  job01_bench_nbody.sh  job01_bench_qap.sh  job01_qap_chr18a.sh  job01_qap_chr18b.sh  job01_qap_chr20a.sh  job01_qap_chr20b.sh  job01_qap_chr20c.sh  job01_qap_chr22a.sh  job01_qap_chr22b.sh  job01_qap_chr25a.sh
exercises/sheet_01/results/: delannoy.csv  mmul.csv  nbody.csv
exercises/sheet_01/results_lcc3/: delannoy.csv  filegen.csv  filesearch.csv  (+3 more)
exercises/sheet_02/: bench_small_samples.sh  benchmark.sh  exec_with_workstation_heavy.sh  sheet_02_sol.md
exercises/sheet_03/: sheet_03_sol.md
exercises/sheet_04/: sheet_04_sol.md
exercises/sheet_05/: bench_levels.sh  bench_o2_o3.sh  bench_o2o3.sh  o2o3_evaluate_flags.py  plot.sh  plot_levels.sh  plot_noyrange.sh  plot_o2o3.sh  sheet_05_sol.md
exercises/sheet_05/test_cases/: CMakeLists.txt
exercises/sheet_06/: .gitignore  bench_mmul_ti_tk.sh  benchmark.sh  latency.plt  plot_latency.sh  plot_mmul.sh  sheet_06_sol.md
exercises/sheet_07/: .gitignore  benchmark.sh  sheet_07_sol.md
exercises/sheet_08/: sheet_08_sol.md
exercises/sheet_10/: benchmark.sh  report.md
exercises/sheet_12/: bench_o2o3.sh  benchmark.sh  fib_mod.lua  flag_results.csv  gprof_results.txt  jumptable.md  results.md
larger_samples/: README.md
(+619 files in other folders)
